# QuickBites_backend

./: .env.example  .gitignore  README.md  alembic.ini  entrypoint.sh  find_fivestar.py  pyproject.toml  render.yaml  requirements.txt  scan_all_dbs.py  test.db  test_10116.db  test_1140.db  test_11592.db  test_12292.db  test_13644.db  test_13840.db  test_14232.db  test_14424.db  test_17184.db  test_17912.db  test_21568.db  test_22420.db  test_22928.db  test_2336.db  test_23748.db  test_23756.db  test_24200.db  test_24532.db  test_25012.db  test_26312.db  test_26724.db  test_27236.db  test_6164.db  test_cart.py  test_cart_get.py  test_cart_headers.py  test_old.db  users.txt
alembic/: env.py  script.py.mako
alembic/versions/: 20250602_reviews.py  20260606_add_notifications_table.py  20260607_add_chat_messages.py  (+21 more)
app/: __init__.py  main.py  socket_server.py
scripts/: add_missing_columns.py  alter_alembic_version_column.py  auto_apply_migrations.py  check_db_tables.py  create_missing_core_tables.py  create_schema_and_stamp.py  create_users_table.py  debug_register.py  drop_all_tables.py  drop_conflicting_tables.py  ensure_user_profile_columns.py  fix_alembic_version.py  inspect_source_schema.py  inspect_source_tables.py  migrate_data.py  reset_and_seed.py  seed.py  seed_test_data.py  wipe_public_schema.py
tests/: conftest.py  test_phase13_recommendations.py  test_phase1_auth.py  test_phase2_restaurants.py  test_phase3_menu.py  test_phase8_delivery.py  test_phase8_delivery_assignment.py  test_phase9_cache.py  test_phase9_socketio.py  test_phase9_tracking.py
(+121 files in other folders)
