[tool.poetry]
name = "quickbites-backend"
version = "0.1.0"
description = "FastAPI backend for QuickBites food delivery platform"
authors = ["QuickBites Team <team@quickbites.example>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
python-dotenv = "^1.0.0"
"psycopg[binary]" = "^3.1.20"
"passlib[bcrypt]" = "^1.8.0"
python-jose = "^3.3.0"
email-validator = "^1.3.1"
sqlalchemy = "^2.0.20"
python-socketio = "^5.11.0"
python-engineio = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^0.22.0"
httpx = "^0.24.0"
alembic = "^1.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
